<resources>
	<string name="connect_with_facebook">Connect With Facebook</string>
	<string name="live_chess_server_unavailable">Live Chess server is currently unavailable.</string>
	<string name="live_chess_server_upgrading">We are trying to improve chess.com! Currently the site is being upgraded. It will be live again in no time. Please try to login again shortly. Thanks!</string>
	<string name="app_name">Chess</string>
	<string name="sign_out">Sign Out</string>
	<string name="game_expired">Game expired</string>
	<string name="leave_game">Leave game?</string>
	<string name="play_live">Play Live</string>
	<string name="play_online">Play Online</string>
	<string name="play_computer">Play Computer</string>
	<string name="tactics_trainer">Tactics Trainer</string>
	<string name="video_lessons">Video Lessons</string>
    <string name="label_play_live">play live</string>
    <string name="label_play_online">play online</string>
    <string name="label_play_comp">play comp</string>
    <string name="label_online_new_game">new online game</string>
    <string name="label_live_new_game">new live game</string>
    <string name="label_video">video</string>
    <string name="label_settings">settings</string>
    <string name="label_tactics">tactics</string>
    <string name="label_game_live">live game</string>
    <string name="label_game_online">online game</string>
    <string name="label_game_finished">finished game</string>
    <string name="label_game_comp">comp game</string>
    <string name="label_chat_live">live chat</string>
    <string name="label_chat_online">online chat</string>
    <string name="label_sign_up">Join Now – It’s Free!</string>
    <string name="label_friend_challenge_live">friend challenge live</string>
    <string name="label_create_challenge_live">create live challenge</string>
    <string name="label_friend_challenge_online">friend challenge online</string>
    <string name="label_create_challenge_online">create online challenge</string>
	<string name="settings">Settings</string>
	<string name="start_new_game">Start New Game</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="log_in">Log In</string>
	<string name="sign_up">Sign Up</string>
	<string name="complete_singup">Complete Signup</string>
	<string name="play_as_guest">Play As Guest</string>
	<string name="white">White</string>
	<string name="black">Black</string>
	<string name="human">Human</string>
	<string name="guest">Guest</string>
	<string name="computer">Computer</string>
    <string name="new_game_white">New Game (white)</string>
    <string name="new_game_black">New Game (black)</string>
    <string name="email_game">Email Game</string>
    <string name="load">Load Saved Game</string>
	<string name="thinking_">Thinking…</string>
    <string name="create_challenge">Create Challenge</string>
	<string name="open_challenges">Open Challenges</string>
	<string name="challenge_friend">Challenge Friend</string>
    <string name="challenge_created">Challenge Created!</string>
    <string name="you_will_notified_when_game_starts">You will be notified when the game starts.</string>
    <string name="challenge_sent">Challenge Sent!</string>
	<string name="create_open_challenge">Create Open Challenge</string>
	<string name="current_live_game">Current Live Game</string>
    <string name="friend">Friend</string>
    <string name="friends">Friends</string>
    <string name="sorry">Sorry</string>
    <string name="no_friends_invite">You have no friends yet. You can invite them via www.chess.com.</string>
    <string name="no_friends_online">"Your friends are not online. If You didn't invite them yet, go to www.chess.com."</string>
    <string name="invite">Invite</string>
    <string name="draw_accepted">Draw accepted!</string>
    <string name="accept">Accept</string>
    <string name="challenge_accepted">Challenge Accepted!</string>
    <string name="challenge_declined">Challenge Declined!</string>
    <string name="request_accepted">Request Accepted!</string>
    <string name="request_declined">Request Declined!</string>
    <string name="decline">Decline</string>
    <string name="game_type">Game Type</string>
	<string name="type_">Type:</string>
	<string name="chess_classic">Classic Chess</string>
	<string name="chess_960">Chess 960</string>
	<string name="initial_time">Initial Time</string>
	<string name="bonusTime">Bonus Time</string>
	<string name="rated_game">Rated Game</string>
	<string name="rated_game_">Rated Game:</string>
	<string name="i_play_as">I Play As</string>
	<string name="i_play_as_">I Play As:</string>
	<string name="days_per_move">Days Per Move</string>
	<string name="days_per_move_">Days Per Move:</string>
	<string name="min_rating">Min Rating</string>
	<string name="max_rating">Max Rating</string>
	<string name="email">Email</string>
	<string name="retype_password">Re-type Password</string>
	<string name="country">Country</string>
	<string name="board_blue">Blue</string>
	<string name="board_brown">Brown</string>
	<string name="board_green">Green</string>
	<string name="board_grey">Grey</string>
	<string name="board_marble">Marble</string>
	<string name="board_red">Red</string>
	<string name="board_tan">Tan</string>
	<string name="board_wood_light">Wood Light</string>
	<string name="board_wood_dark">Wood Dark</string>
	<string name="pieces_game">Game Room</string>
	<string name="pieces_alpha">Alpha</string>
	<string name="pieces_book">Book</string>
	<string name="pieces_cases">Cases</string>
	<string name="pieces_classic">Classic</string>
	<string name="pieces_club">Club</string>
	<string name="pieces_condal">Condal</string>
	<string name="pieces_maya">Maya</string>
	<string name="pieces_modern">Modern</string>
	<string name="pieces_vintage">Vintage</string>
	<string name="after_i_move">After I Move</string>
	<string name="enable_notifications">Enable Notifications</string>
	<string name="show_submit_button">Show Submit Button</string>
	<string name="enable_sounds">Enable sounds</string>
	<string name="strength">Strength</string>
	<string name="interface_caps">interface</string>
	<string name="board">Board</string>
	<string name="contact_us">Contacts Us</string>
	<string name="show_coordinates">Show coordinates</string>
	<string name="move_highlights">Move Highlights</string>
	<string name="invite_a_friend">Invite A Friend</string>
	<string name="logout">Logout</string>
	<string name="vacation_on">On Vacation</string>
	<string name="vacation_off">Not on Vacation</string>
    <string name="warning">Warning!</string>
    <string name="account_error">Account error.</string>
    <string name="server_stopped">Server stopped.</string>
    <string name="reason_">Reason</string>
    <string name="message_">Message</string>
    <string name="locale_change">Locale has changed</string>
    <string name="restart">Restart</string>
	<string name="messages">Messages</string>
	<string name="analysis_board">Analysis Board</string>
	<string name="offer_draw">Offer A Draw</string>
	<string name="resign_or_abort">Resign (Or Abort)</string>
	<string name="resign">Resign</string>
	<string name="abort">Abort</string>
	<string name="cancel">Cancel</string>
	<string name="send">Send</string>
	<string name="help">Help</string>
	<string name="game">Game</string>
	<string name="options">Options</string>
	<string name="reside">Flip</string>
	<string name="hint">Hint</string>
	<string name="prev">Prev</string>
	<string name="next">Next</string>
	<string name="next_game">Next Game</string>
	<string name="chat">Chat</string>
    <string name="draw_offered">Draw Offered</string>
    <string name="show_answer">Show Answer</string>
    <string name="skip_problem">Skip Problem</string>
    <string name="sending_game_info">Sending game info…</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="accepted">Accepted!</string>
    <string name="accept_draw_q">Accept Draw?</string>
    <string name="abort_resign_game">Abort/Resign a game:</string>
    <string name="are_you_sure_q">Are You sure?</string>
    <string name="you_got_new_msg">You have a new message!</string>
    <string name="challenges">Challenges</string>
    <string name="challenge">Challenge</string>
    <string name="analysis_mode">Analysis Mode</string>
    <string name="check">Check!</string>
    <string name="choose_a_piece">Choose a piece</string>
	<string name="skill">Skill Level</string>
	<string name="category">Category</string>
	<string name="search">Search</string>
	<string name="play">Play</string>
	<string name="videos">Videos</string>
    <string name="title">Title</string>
    <string name="duration">Duration</string>
    <string name="published">Published</string>
    <string name="details">Details</string>
    <string name="play_video">Play Video</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_my_account">Upgrade My Account</string>
    <string name="upgrade_to_full_videos">Upgrade for full access to videos!</string>
    <string name="removeAds">Upgrade And Remove Ads!</string>
    <string name="amazing_games_category">amazing-games</string>
    <string name="end_games_category">endgames</string>
    <string name="openings_category">openings</string>
    <string name="rules_basics_category">rules-basics</string>
    <string name="strategy_category">strategy</string>
    <string name="tactics_category">tactics</string>
    <string name="beginner_category">beginner</string>
    <string name="intermediate_category">intermediate</string>
    <string name="advanced_category">advanced</string>
    <string name="max_tactics_reached">You have hit your maximum number of tactics for today. Would you like to be able to do more tactics?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ten_tactics_completed">Demo tactics completed!</string>
    <string name="offline_mode">Offline mode</string>
    <string name="no_network_rating_not_changed">Internet access is not currently available. As a result, your rating will not change after completing problems until your Internet connection returns.</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="problem_solved_">Problem Solved!</string>
    <string name="score_arg">Score: %1$s</string>
    <string name="new_rating_arg">New rating %2$s </string>
    <string name="next_tactic_puzzle">Next Tactic Puzzle</string>
    <string name="upgrade_to_continue">Upgrade To Continue</string>
    <string name="retry">Retry</string>
    <string name="stop">Stop</string>
    <string name="daily_limit_reached">Daily Limit Reached</string>
    <string name="solution">Solution</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="days">days</string>
    <string name="day">day</string>
	<string name="image">image</string>
	<string name="new_game">New Game</string>
	<string name="new_create_profile">Create Profile</string>
	<string name="new_skip_this_step">Skip This Step</string>
	<string name="last_name">Last Name</string>
	<string name="first_name">First Name</string>
	<string name="profile_picture">Profile Picture</string>
	<string name="or_use_your_email">Or Use Your Email Address:</string>
	<string name="games">Games</string>
	<string name="welcome_two_line_1">&#8226; Over 8,000,000 members</string>
	<string name="welcome_two_line_2">&#8226; Millions of games played each week</string>
	<string name="welcome_two_line_3">&#8226; Play against players at your level</string>
	<string name="number_one_online_chess">#1 in Online Chess</string>
	<string name="share">Share</string>
	<string name="sign_up_now_free">Sign Up Now, It\'s FREE!</string>
	<string name="already_member_log_in">Already a member? Log in</string>
	<string name="edit">Edit</string>
	<string name="add">Add</string>
</resources>