<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@id/mainView"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingTop="@dimen/default_scr_top_padding"
		android:paddingLeft="@dimen/default_scr_side_padding"
		android:paddingRight="@dimen/default_scr_side_padding"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/LinearDescription"
			>
			<com.chess.RoboTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/game_type"
				android:layout_weight="8"
				/>

			<RadioGroup
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_weight="2"
				>

				<com.chess.RoboRadioButton
					android:id="@+id/classic"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:checked="true"
					android:text="@string/chess_classic"
					/>

				<com.chess.RoboRadioButton
					android:id="@+id/chess960"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_weight="1"
					android:text="@string/chess_960"
					/>

			</RadioGroup>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/LinearDescription"
			>

			<com.chess.RoboTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/i_play_as"
				android:layout_weight="6"
				/>

			<Spinner
				android:id="@+id/iplayas"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:entries="@array/playas"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/LinearDescription"
			>

			<com.chess.RoboTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/days_per_move"
				android:layout_weight="6"
				/>

			<Spinner
				android:id="@+id/dayspermove"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:entries="@array/dayspermove"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/LinearDescription"
			>

			<com.chess.RoboTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/min_rating"
				android:layout_weight="6"
				/>

			<Spinner
				android:id="@+id/minRating"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:entries="@array/minRating">
			</Spinner>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/LinearDescription"
			>

			<com.chess.RoboTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/max_rating"
				android:layout_weight="6"
				/>

			<Spinner
				android:id="@+id/maxRating"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:entries="@array/maxRating"
				android:layout_weight="4"
				/>
		</LinearLayout>

		<com.chess.RoboCheckBox
			android:id="@+id/ratedGame"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:text="@string/rated_game"
			/>

		<com.chess.RoboButton
			android:id="@+id/createchallenge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/create_challenge"
			android:layout_marginTop="@dimen/margin_top_between_buttons"
			/>

	</LinearLayout>

</ScrollView>