<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/firstView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/welcome_features_padding_bottom"
    >

    <com.chess.RoboTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_one_online_chess"
        android:layout_alignParentTop="true"
        android:layout_above="@id/firstWelcomeImg"
        style="@style/WelcomeFeatureTitle"
        />

    <ImageButton
        android:id="@+id/playBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_play_video_medium"
        android:background="@drawable/video_play_btn_back_medium_selector"
        android:visibility="visible"
        android:contentDescription="@string/image"
        />

    <FrameLayout
        android:id="@+id/youTubeFrameContainer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/firstWelcomeImg"
        />

    <!--Features list-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstWelcomeImg"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingTop="27dip"
        >

        <com.chess.RoboTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_two_line_1"
            style="@style/WelcomeListFeature"
            />

        <com.chess.RoboTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_two_line_2"
            style="@style/WelcomeListFeature"
            />

        <com.chess.RoboTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_two_line_3"
            style="@style/WelcomeListFeature"
            />

    </LinearLayout>

</RelativeLayout>